[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timesym"
version = "0.1.0"
description = "Temporal interferometer simulations and analysis shims (RF cable, optical, QE)."
authors = [{name = "Your Name"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "scipy>=1.9",
    "pyyaml>=6.0",
]

[project.urls]
Source = "https://example.com/repo"
